--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/postgresql": "^4.5.7",
     "express": "^4.17.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.5"
   },
   "mikro-orm": {
     "useTsNode": true,
