--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "esnext.asynciterable"
     ],
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./backend/dist",
     "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": true,
@@ -25,14 +25,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".."
+    "baseUrl": "./"
   },
   "exclude": [
-    "../node_modules"
+    "./node_modules"
   ],
   "include": [
-    "./src/routes/**/*.ts",
-    "./src/**/*.tsx",
-    "./src/**/*.ts"
+    "./backend/src/**/*.tsx",
+    "./backend/src/**/*.ts",
+    "./backend/dist/**/*.js"
   ]
 }
