--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mikro-orm/core": "^4.5.7",
     "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/postgresql": "^4.5.7",
+    "@types/express": "^4.17.12",
     "apollo-server-express": "^2.25.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
@@ -15,7 +16,9 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.21.6",
     "@types/node": "^15.12.5",
+    "apollo": "^2.33.4",
     "typescript": "^4.3.5"
   },
   "mikro-orm": {
