--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "graphql": "^15.5.1",
     "pg": "^8.6.0",
     "ts-node": "^10.0.0",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.6",
