--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mikro-orm/postgresql": "^4.5.7",
     "@types/express": "^4.17.12",
     "apollo-server-express": "^2.25.2",
+    "argon2": "^0.28.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
