--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "pg": "^8.6.0",
+    "react": "^17.0.2",
     "redis": "^3.1.2",
     "ts-node": "^10.0.0",
     "type-graphql": "^1.1.1",
