--- a/public/package.json
+++ b/public/package.json
@@ -7,11 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.4.2",
-    "@emotion/react": "^11.0.0",
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.0.0",
     "@types/node": "^16.0.0",
+    "emotion-theming": "^11.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "next": "^11.0.1",
     "react": "^17.0.2",
