--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "urql": "^2.0.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.21.6",
+    "@graphql-codegen/cli": "1.21.6",
     "@types/node": "^15.12.5",
     "apollo": "^2.33.4",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "@graphql-codegen/typescript-operations": "1.18.3",
+    "@graphql-codegen/typescript": "1.22.4",
+    "@graphql-codegen/typescript-react-apollo": "2.3.0"
   },
   "mikro-orm": {
     "useTsNode": true,
@@ -42,5 +45,8 @@
       "./backend/src/mikro-orm.config.ts",
       "./backend/dist/mikro-orm.config.js"
     ]
+  },
+  "scripts": {
+    "gen": "graphql-codegen --config codegen.yml"
   }
 }
