--- a/public/package.json
+++ b/public/package.json
@@ -21,7 +21,8 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "ws": "^7.5.3"
   },
   "license": "MIT",
   "devDependencies": {
@@ -29,7 +30,7 @@
     "@graphql-codegen/introspection": "1.18.2",
     "@graphql-codegen/typescript": "1.22.4",
     "@graphql-codegen/typescript-operations": "1.18.3",
-    "@graphql-codegen/typescript-urql": "^2.0.10",
-    "@graphql-codegen/typescript-react-apollo": "^2.0.6"
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "@graphql-codegen/typescript-urql": "^2.0.10"
   }
 }
